chat-infra/kube/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: chatter-dev
  labels:
    name: chatter-dev
