chat-infra/kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatter-deployment
  namespace: chatter-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatter
  template:
    metadata:
      labels:
        app: chatter
    spec:
      containers:
        - name: chatter-container
          image: __CONTAINER_IMAGE__
          ports:
            - name: chatter-svc
              containerPort: 8080
