chat-infra/kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chatter-service
  namespace: chatter-dev
spec:
  type: NodePort
  selector:
    app: chatter
  ports:
    - protocol: TCP
      port: 8080
      targetPort: chatter-svc
